more site set-up

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  Contact Me Here:
+  More About Matthew Nieva:
   <div class="links-list">
     {% for item in site.data.links %}
     <a
