--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 <nav>
-    <div>Whatchu Up To Mattchoo?</div>
-    {% for item in site.data.nav %}
-    <a href="{{item.link}}" {% if page.url == item.link %} style="color: red;"{% endif %}>
-    {{ item.name}}
+    <div>
+        <a href= "{{ site.baseurl }}/index.html">Mattchoo's Blog</a>
+    </div>
+    {% for tag in site.tags %}
+    <a href="{{site.baseurl}}/{{tag[0]}}.html" {% if page.url == item.link %} style="color: red;"{% endif %}>
+    {{ tag[0] }}
     </a>
     {% endfor %}
 </nav>
