--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer>
-  More About Matthew Nieva:
+  <div class="footer-title">About Matthew Nieva</div>
+  <div class="footer-text">
+    Matthew Nieva is a second-year CSE student at UCLA. He is passionate about
+    empowering people to make a difference through technology and is spending
+    college learning how to achieve just that!
+  </div>
   <div class="links-list">
     {% for item in site.data.links %}
     <a
