--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,11 +13,14 @@
     {% include nav.html %} 
     <hr></hr>
     {{ content }} 
+    <hr />
     <ul>
       {% for post in site.posts %}
           <li class="post">
-            <a href="{{post.url}}">{{ post.title }}</a>
-            <div> {{ post.date | date: '%B %d, %Y'}}</div>
+            <span class="post-line">
+              <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
+              <div> {{ post.date | date: '%B %d, %Y'}}</div>
+            </span>
             <div>
               {{ post.excerpt }}
             </div>
@@ -25,10 +28,11 @@
                 Tags: 
                 {% for tag in post.tags %}
                 <a href="{{ site.baseurl}}/{{ tag }}" class = "tag-link">
-                    <span class="tag-container">{{ tag }}</span>
+                    <span class="tag-container hover-text">{{ tag }}</span>
                 </a>
                 {% endfor %}
             </div>
+            <hr/>
             
           </li>
       {% endfor %}
