--- a/_layouts/tagged.html
+++ b/_layouts/tagged.html
@@ -13,26 +13,31 @@
     {% include nav.html %} 
     <hr></hr>
     {{ content }} 
-
-    {% for tag in site.tags %}
-      {% if tag[0] == page.title %}
-        {% for post in tag[1] %}
-        <li class="post">
-          <a href="{{post.url}}">{{ post.title }}</a>
-          <div> {{ post.date | date: '%B %d, %Y'}}</div>
-          <div>
-            {{ post.excerpt }}
-          </div>
-          <div>
-            Tags: 
-            {% for tag in post.tags %}
-            <a href="{{ site.baseurl}}/{{ tag }}" class = "tag-link">
-              <span class="tag-container">{{ tag }}</span>
-            </a>
-            {% endfor %}
-        </div>
-        </li>
-        {% endfor %}
+    <ul>
+      {% for tag in site.tags %}
+        {% if tag[0] == page.title %}
+          {% for post in tag[1] %}
+          <li class="post">
+            <span class = "post-line">
+              <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
+              <div> {{ post.date | date: '%B %d, %Y'}}</div>
+            </span>
+            <div>
+              {{ post.excerpt }}
+            </div>
+            <div>
+                Tags: 
+                {% for post-tag in post.tags %}
+                <a href="{{ site.baseurl}}/{{ post-tag }}" class = "tag-link">
+                    <span class="tag-container hover-text">{{ post-tag }}</span>
+                </a>
+                {% endfor %}
+            </div>
+            <hr/>
+            
+          </li>
+      {% endfor %}
+  </ul>
       {% endif %}
     {% endfor %}
     <hr></hr>
