--- a/_layouts/tagged.html
+++ b/_layouts/tagged.html
@@ -11,36 +11,37 @@
   </head>
   <body>
     {% include nav.html %} 
-    <hr></hr>
-    {{ content }} 
-    <ul>
-      {% for tag in site.tags %}
-        {% if tag[0] == page.title %}
-          {% for post in tag[1] %}
-          <li class="post">
-            <span class = "post-line">
-              <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
-              <div> {{ post.date | date: '%B %d, %Y'}}</div>
-            </span>
-            <div>
-              {{ post.excerpt }}
-            </div>
-            <div>
-                Tags: 
-                {% for post-tag in post.tags %}
-                <a href="{{ site.baseurl}}/{{ post-tag }}" class = "tag-link">
-                    <span class="tag-container hover-text">{{ post-tag }}</span>
-                </a>
-                {% endfor %}
-            </div>
-            <hr/>
-            
-          </li>
+    <div class="main-body">
+      {{ content }} 
+      <ul>
+        {% for tag in site.tags %}
+          {% if tag[0] == page.title %}
+            {% for post in tag[1] %}
+            <li class="post">
+              <span class = "post-line">
+                <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
+                <div> {{ post.date | date: '%B %d, %Y'}}</div>
+              </span>
+              <div>
+                {{ post.excerpt }}
+              </div>
+              <div>
+                  Tags: 
+                  {% for post-tag in post.tags %}
+                  <a href="{{ site.baseurl}}/{{ post-tag }}" class = "tag-link">
+                      <span class="tag-container hover-text">{{ post-tag }}</span>
+                  </a>
+                  {% endfor %}
+              </div>
+              <hr/>
+              
+            </li>
+        {% endfor %}
+      </ul>
+        {% endif %}
       {% endfor %}
-  </ul>
-      {% endif %}
-    {% endfor %}
-    <hr></hr>
-    {% include footer.html %}
+      <hr></hr>
+      {% include footer.html %}
+    </div>
   </body>
 </html>
