--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,11 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    {% include nav.html %} 
-    <hr></hr>
-    {{ content }} 
-    <hr></hr>
-    {% include footer.html %}
+    {% include nav.html %}
+    <div class="main-body">
+      {{ content }} 
+      <hr></hr>
+      {% include footer.html %}
+    </div> 
   </body>
 </html>
