--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
   <body>
     {% include nav.html %}
     <div class="main-body">
-      <div class="post-title">{{ page.title }}</div>
+      <h1>{{ page.title }}</h1>
       <div class="post-description">
         Tags: {% for tag in page.tags %}
         <a href="{{ site.baseurl}}/{{ tag }}" class="tag-link">
