--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,11 +2,11 @@
   <a class="home-link hover-text" href="{{ site.baseurl }}/index.html"
     >Mattchoo's Blog
   </a>
-  <span class="tags-nav">
+  <div class="tags-nav">
     {% for tag in site.tags %}
     <a href="{{site.baseurl}}/{{tag[0]}}.html" class="nav-tag small-hover-text">
       {{ tag[0] }}
     </a>
     {% endfor %}
-  </span>
+  </div>
 </nav>
