--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -42,7 +42,7 @@ body {
   color: $main-color;
 }
 
-.tags-nav {
+.tags-nav-flex {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -51,6 +51,14 @@ body {
   flex-wrap: wrap;
   font-size: 20px;
   align-content: center;
+}
+
+.tags-nav {
+  display: grid;
+  grid-template-columns: max-content max-content;
+  max-width: 300px;
+  font-size: 20px;
+  text-align: center;
 }
 
 .nav-tag {
@@ -64,7 +72,7 @@ nav {
   position: fixed;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  width: 80%;
   justify-content: space-between;
   align-content: center;
   align-items: center;
