--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/images/favicon.ico" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    <meta name="description" content="what's going on in mattchoo's life" />
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    {% include nav.html %}
-    <div class="main-body">
-      <h1>{{ page.title }}</h1>
-      <div class="post-description">
-        Tags: {% for tag in page.tags %}
-        <a href="{{ site.baseurl}}/{{ tag }}" class="tag-link">
-          <span class="tag-container hover-text">{{ tag }}</span>
-        </a>
-        {% endfor %}
-      </div>
-      <div>{{page.date | date: '%B %d, %Y'}}</div>
-      {{ content }}
-      <hr class="break"></hr>
-      {% include footer.html %}
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
+
+<h1>{{ page.title }}</h1>
+<div class="post-description">
+  Tags: 
+  {% for tag in page.tags %}
+  <a href="{{ site.baseurl}}/{{ tag }}" class="tag-link hover-text">
+    <span class="tag-container">{{ tag }}</span>
+  </a>
+  {% endfor %}
+  <div>{{page.date | date: '%B %d, %Y'}}</div>
+</div>
+{{ content }}
+<hr class="break"></hr>
