--- a/_layouts/tagged.html
+++ b/_layouts/tagged.html
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/images/favicon.ico" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    <meta name="description" content="what's going on in mattchoo's life" />
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    {% include nav.html %} 
-    <div class="main-body">
-      {{ content }} 
-        {% for tag in site.tags %}
-          {% if tag[0] == page.title %}
-            {% for post in tag[1] %}
-            <li class="post">
-              <span class = "post-line">
-                <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
-                <div> {{ post.date | date: '%B %d, %Y'}}</div>
-              </span>
-              <div>
-                {{ post.excerpt }}
-              </div>
-              <div>
-                  Tags: 
-                  {% for post-tag in post.tags %}
-                  <a href="{{ site.baseurl}}/{{ post-tag }}" class = "tag-link">
-                      <span class="tag-container hover-text">{{ post-tag }}</span>
-                  </a>
-                  {% endfor %}
-              </div>
-              <hr/>         
-            </li>
-          {% endfor %}
-          {% endif %}
-        {% endfor %}
-      <hr></hr>
-      {% include footer.html %}
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
+{{ content }} 
+  {% for tag in site.tags %}
+    {% if tag[0] == page.title %}
+      {% for post in tag[1] %}
+        <li class="post">
+          <span class = "post-line">
+            <a  class = "hover-text post-title" href="{{post.url}}">{{ post.title }}</a>
+            <div> {{ post.date | date: '%B %d, %Y'}}</div>
+          </span>
+          <div>
+            {{ post.excerpt }}
+          </div>
+          <div>
+              Tags: 
+              {% for post-tag in post.tags %}
+              <a href="{{ site.baseurl}}/{{ post-tag }}" class = "tag-link hover-text">
+                  <span class="tag-container">{{ post-tag }}</span>
+              </a>
+              {% endfor %}
+          </div>
+          <hr/>         
+        </li>
+      {% endfor %}
+    {% endif %}
+  {% endfor %}
+<hr></hr>
