--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 <div class="post-description">
-  Tags: 
-  {% for tag in page.tags %}
+  Tags: {% for tag in page.tags %}
   <a href="{{ site.baseurl}}/{{ tag }}" class="tag-link hover-text">
     <span class="tag-container">{{ tag }}</span>
   </a>
@@ -13,4 +12,4 @@ layout: default
   <div>{{page.date | date: '%B %d, %Y'}}</div>
 </div>
 {{ content }}
-<hr class="break"></hr>
+<hr class="break" />
