--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -239,6 +239,12 @@ li {
   margin: 5px;
 }
 
+.scrobble-date-header {
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+}
+
 img {
   max-width: 100%;
 }
