--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,13 @@
 <footer>
   <div class="footer-title">About Matthew Nieva</div>
   <div class="footer-text">
-    Matthew Nieva is a second-year CSE student at UCLA. He is passionate about
+    Matthew Nieva is a third-year CSE student at UCLA. He is passionate about
     empowering people to make a difference through technology and is spending
     college learning how to achieve just that!
   </div>
   <div class="links-list">
     {% for item in site.data.links %}
-    <a
-      href="{{item.link}}"
-      class="link-container"
-      rel="noreferrer noopener"
-      target="_blank"
-    >
+    <a href="{{item.link}}" class="link-container" rel="noreferrer noopener" target="_blank">
       <img class="link-img" src="{{item.icon}}" alt="{{item.name}}" />
     </a>
     {% endfor %}
